<resources>
    <string name="app_name">Transcend Elite</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="empty">Empty Folder</string>
    <string name="emptywording">You have no files here.</string>
    <string name="loading">Now loading\u2026</string>

    <string name="pref_name" translatable="false">PREFERENCE</string>
    <string name="pref_file_sort_type" translatable="false">FILE SORT TYPE</string>
    <string name="pref_mainpage_location" translatable="false">MAINPAGE LOCATION</string>
    <string name="pref_sd_location" translatable="false">SD LOCATION</string>
    <string name="pref_camera_location" translatable="false">CAMERA LOCATION</string>
    <string name="pref_download_location" translatable="false">DOWNLOAD LOCATION</string>
    <string name="pref_pictures_location" translatable="false">PICTURES LOCATION</string>
    <string name="pref_movies_location" translatable="false">MOVIES LOCATION</string>
    <string name="pref_musics_location" translatable="false">MUSIC LOCATION</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="fail">Action Failed.</string>

    <string name="openin_title">Please Choose App</string>
    <string name="conj_selected">%1$d file(s) selected</string>
    <string name="conj_deleted">%1$d item(s) will be deleted.</string>
    <string name="snackbar_not_support_share">This File does not support Share function</string>

    <!-- Drawer -->
    <string name="drawer_home">Home</string>
    <string name="drawer_browser">Browser</string>
    <string name="drawer_backup">Backup</string>
    <string name="drawer_setting">Settings</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_feedback">Feedback</string>

    <!-- Local -->
    <string name="nav_local">Local</string>

    <!-- SD -->
    <string name="nav_sd">SD Card</string>
    <string name="no_sd">SD card is not found.</string>
    <string name="refresh">Refresh</string>

    <!-- OTG -->
    <string name="nav_otg" translatable="false">OTG</string>
    <string name="documenttree_guide_title">Need permission</string>
    <string name="documenttree_guide">Please follow the guide to get permission.</string>
    <string name="snackbar_plz_select_otg">Please select OTG device.</string>
    <string name="snackbar_plz_select_sd">Please select SD card.</string>
    <string name="snackbar_plz_select_top">Please select the root folder.</string>
    <string name="no_otg">OTG is not found.</string>
    <string name="permission_guide_next">Next</string>
    <string name="preguide_knowhow">Learn how</string>
    <string name="open_app_when_insert_otg">An OTG device is connected, do you want to open Transcend Elite ?</string>

    <!-- Fab -->
    <string name="more">More</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="newfolder">New Folder</string>
    <string name="encrypt">Encryption</string>

    <!-- Photo information -->
    <string name="photo_size">Size</string>
    <string name="photo_time">Last modified time</string>
    <string name="photo_location_phone">Located in Local</string>
    <string name="photo_location_sd">Located in SD Card</string>
    <string name="photo_location_otg">Located in OTG</string>
    <string name="photo_path">Path</string>

    <string name="no_item_selected">No item selected</string>

    <string name="invalid_name">Invalid name</string>
    <string name="duplicate_name">Duplicate name</string>
    <string name="illegal_name">Incorrect characters</string>
    <string name="untitled_folder" translatable="false"></string>

    <!-- Action -->
    <string name="title_copy_to" translatable="false">Copy to…</string>
    <string name="title_move_to" translatable="false">Move to…</string>
    <string name="error">Error</string>
    <string name="done">Action Finished</string>
    <string name="select_folder_error">Destination folder cannot be same as the source folder.</string>
    <string name="select_destination">Select a destination folder then tap the button in the bottom right corner to paste</string>
    <string name="encryptfilename">Encrypt File Name</string>
    <string name="password">Password</string>
    <string name="encrypt_subfilename" translatable="false">.enc</string>
    <string name="encrypting">Encrypting</string>
    <string name="decrypt">Decryption</string>
    <string name="decrypting">Decrypting</string>
    <string name="filename">Decrypt Folder Name</string>
    <string name="password_incorrect">Incorrect password</string>
    <string name="file_exist">This location already has a file with the same name</string>

    <!-- File information -->
    <string name="info_title">Information</string>
    <string name="info_name">Name:</string>
    <string name="info_type">Type:</string>
    <string name="info_image">Photo</string>
    <string name="info_video">Video</string>
    <string name="info_music">Music</string>
    <string name="info_document">Document</string>
    <string name="info_folder">Directory</string>
    <string name="info_other">Others</string>
    <string name="info_size">Size:</string>
    <string name="info_file_number">File/Folder counts:</string>
    <string name="info_file_number_text1">file</string>
    <string name="info_dir_number_text1">directory</string>
    <string name="info_file_number_text2">files</string>
    <string name="info_dir_number_text2">directories</string>
    <string name="info_file_number_computing">Calculating\u2026</string>
    <string name="info_mtime">Last modified time:</string>
    <string name="info_path">Path:</string>

    <string name="top_arrow" translatable="false">&#9650;</string>
    <string name="bottom_arrow" translatable="false">&#9660;</string>

    <!-- Feedback -->
    <string name="feedback_done">Done</string>
    <string name="feedback_fail">Try again</string>
    <string name="ok">OK</string>
    <string name="feedback_empty">Please fill out the required fields.</string>
    <string name="yes">Yes</string>
    <string name="feedback_title_name">Name</string>
    <string name="feedback_title_email">Email</string>
    <string name="feedback_title_region">Region</string>
    <string name="feedback_title_device">Device Information</string>
    <string name="feedback_title_description">Problem Description</string>
    <string name="feedback_edittext_require">Required</string>
    <string name="feedback_send_btn">Send</string>

    <!-- Setting -->
    <string name="setting_storage">Storage</string>
    <string name="setting_capacity">Capacity</string>
    <string name="setting_cleancache">Clean Cache</string>
    <string name="setting_information">Information</string>
    <string name="setting_about">About</string>
    <string name="about_copyright" translatable="false">Copyright \u00A9 2017 Transcend Information Inc.\nAll rights reserved.</string>
    <string name="about_enduser">End-User License Agreement</string>
    <string name="about_opensource">Open Source Statement</string>
    <string name="about_version">App Version</string>
    <string name="used">Used capacity</string>

    <!-- Backup -->
    <string name="backup_filetype">Choose file type</string>
    <string name="backup_destination">Select backup destination</string>
    <string name="backup_photo">Photo</string>
    <string name="backup_video">Video</string>
    <string name="backup_music">Music</string>
    <string name="backup_doc">Files</string>
    <string name="backup_folder" translatable="false">Elite Backup</string>
    <string name="free">Free capacity</string>
    <string name="sdcard_name">SD Card</string>
    <string name="menu_settings">Setting</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_copy_to_clipboard">Copy</string>
    <string name="ask_exit">Are you sure you want to quit Transcend Elite?</string>
    <string name="backup_start">Are you sure to start backup?</string>
    <string name="backup_finish">Backup complete！</string>

    <!-- Security Information -->
    <string name="Lsecurity">Security</string>
    <string name="LLogin">Login</string>
    <string name="LSetPW">Set password</string>
    <string name="LRemovePW">Remove password</string>
    <string name="LChangePW">Change password</string>
    <string name="LNoPW">No password set</string>
    <string name="LSettedPW">Lock enable</string>
    <string name="LCurrentPW">Current Password</string>
    <string name="LNewPW">New Password</string>
    <string name="LConfirmPW">Confirm Password</string>
    <string name="MSG_UserUnlockDisk">Input your password to unlock the drive.</string>
    <string name="MSG_UserRemovePWLostSecurity">Once password is remove, the drive is unprotect.</string>
    <string name="MSG_UserUseDiskViaElite">Once password is set, you can only open the drive via Elite.</string>
    <string name="MSG_PWLimition">4~16 Characters with no space</string>
    <string name="MSG_NewPWNextLogin">Input new password at next login.</string>
    <string name="MSG_SelectChangeOrRemove">You can select to change or remove password.</string>
    <string name="msg_password_incorrect">Incorrect password</string>
    <string name="preguide_message">Android OS versions have restricted access to your external storage.Please grant us permission first.</string>
    <string name="security_device_name" translatable="false">esd220c</string>
    <string name="transcend_short_name" translatable="false">ts</string>
    <string name="security_notify">Notify</string>
    <string name="rate_app">Rate this App</string>
    <string name="security_not_support">This mobile phone does not support this device.</string>
    <string name="samsung" translatable="false">samsung</string>
</resources>
