<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_home"/>
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/drawer_browser" />
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_backup" />
    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/drawer_help" />
    </group>

    <group
        android:id="@+id/grp3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/drawer_feedback" />
    </group>


</menu>
