<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/securityTitle"
        android:src="@drawable/change_password"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/securityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@+id/securityWording"
        android:text="@string/LSettedPW"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/securityWording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/MSG_NewPWNextLogin"/>

    <RelativeLayout
        android:id="@+id/securityPart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/securityWording">

        <EditText
            android:id="@+id/editChangeCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:inputType="textPassword"
            android:maxLength="16"
            android:hint="@string/password"
            android:background="@drawable/edittext_border"/>

        <TextView
            android:id="@+id/passwordwording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editChangeCurrentPassword"
            android:gravity="center"
            android:text="@string/MSG_PWLimition"/>

        <EditText
            android:id="@+id/editChangeNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editChangeCurrentPassword"
            android:layout_alignEnd="@+id/editChangeCurrentPassword"
            android:layout_below="@+id/passwordwording"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:maxLength="16"
            android:inputType="textPassword"
            android:hint="@string/LNewPW"
            android:background="@drawable/edittext_border"
            android:gravity="center"/>

        <TextView
            android:id="@+id/empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editChangeNewPassword"
            android:gravity="center"
            android:text=""/>

        <EditText
            android:id="@+id/editChangeConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editChangeCurrentPassword"
            android:layout_alignEnd="@+id/editChangeCurrentPassword"
            android:layout_below="@+id/empty"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:maxLength="16"
            android:inputType="textPassword"
            android:hint="@string/LConfirmPW"
            android:background="@drawable/edittext_border"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/imageChangeCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_check_circle_green"
            android:layout_alignTop="@+id/editChangeConfirmPassword"
            android:layout_toEndOf="@+id/editChangeConfirmPassword" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/change_progress_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/btnChangeCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/storage_text_size" />

        <TextView
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:background="@color/colorLightLightGray"/>

        <Button
            android:id="@+id/btnChangeOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/ok"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/storage_text_size" />

    </LinearLayout>


</RelativeLayout>