<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/securityTitle"
        android:layout_alignParentTop="true"
        android:src="@drawable/settings" />

    <TextView
        android:id="@+id/securityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/securityWording"
        android:gravity="center"
        android:text="@string/LNoPW"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/securityWording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/MSG_UserUseDiskViaElite" />

    <RelativeLayout
        android:id="@+id/securityPart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/securityWording">

        <TextView
            android:id="@+id/passwordWording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/MSG_PWLimition" />

        <EditText
            android:id="@+id/editSettingPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordWording"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/empty3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editSettingPassword"
            android:gravity="center"
            android:text="" />

        <EditText
            android:id="@+id/editSettingConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editSettingPassword"
            android:layout_alignStart="@+id/editSettingPassword"
            android:layout_below="@+id/empty3"
            android:layout_centerVertical="true"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:hint="@string/LConfirmPW"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageSettingCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/editSettingConfirmPassword"
            android:layout_toEndOf="@+id/editSettingConfirmPassword"
            android:src="@mipmap/ic_check_circle_green" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setting_progress_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/btnSettingOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/ok"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/storage_text_size" />

        <TextView
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:background="@color/colorLightLightGray" />

        <Button
            android:id="@+id/btnSettingCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/storage_text_size" />


    </LinearLayout>

</RelativeLayout>