<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/remove"
        android:contentDescription="SSD"
        android:layout_above="@+id/securityTitle"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/securityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/securityWording"
        android:gravity="center"
        android:text="@string/LSettedPW"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/securityWording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/MSG_UserRemovePWLostSecurity"/>

    <RelativeLayout
        android:id="@+id/securityPart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/securityWording">

        <TextView
            android:id="@+id/empty1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/empty2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty1"/>

        <TextView
            android:id="@+id/empty3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty2"/>


        <LinearLayout
            android:id="@+id/passwordPart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty3">

            <EditText
                android:id="@+id/editRemovePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@drawable/edittext_border"
                android:maxLength="16"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:gravity="center"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/btnRemoveCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/storage_text_size" />

        <TextView
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:background="@color/colorLightLightGray"/>

        <Button
            android:id="@+id/btnRemoveOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/ok"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/storage_text_size" />

    </LinearLayout>
</RelativeLayout>